--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Araf",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1"
   },
