--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0"
   },
