--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
+    "react-pageflip": "^2.0.3",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
