--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Library web application built with the MERN stack",
   "type": "module",
   "main": "server.js",
-  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
@@ -14,11 +13,9 @@
   "author": "Araf",
   "license": "ISC",
   "dependencies": {
-    "@react-pdf-viewer/core": "^3.12.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.1",
-    "react-pdf": "^9.1.1"
+    "mongoose": "^8.8.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
