--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^5.4.10",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -22,16 +23,12 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
-    "vite": "^5.4.10"
-  },
-  "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "globals": "^15.11.0"
   }
 }
