--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.1",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
-    "dotenv": "^16.4.7",
     "nodemon": "^3.1.7"
   }
 }
